--- a/c3_index.html
+++ b/c3_index.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<img src="town_hall_logo.gif">
 </head>
 
 <body>
+<img src="town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
 	<header>
 		San Joaquin Valley Town Hall
 		Celebrating our 75th Year		
