--- a/c3_index.html
+++ b/c3_index.html
@@ -10,8 +10,8 @@
 <body>
 <img src="town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
 	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<h2>San Joaquin Valley Town Hall</h2>
+		<h3>Celebrating our 75th Year</h3>
 	</header>
 	<main>
 		
