David Brancaccio October Guest Speaker tag

--- a/c3_index.html
+++ b/c3_index.html
@@ -32,9 +32,9 @@
 		</ul>
 
 		<h1>This season's guest speakers</h1>
-
-		October
-		David Brancaccio
+		<br>
+		<h3>October</h3>
+		<h3><a href="">David Brancaccio</a></h3>
 
 		November
 		Andrew Ross Sorkin
