David Brancaccio October Guest Speaker image and San Joaquin Valley Town Hall Image

--- a/c3_index.html
+++ b/c3_index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-<!--
-<img src="town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
--->
+
+<img src="/images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
+
 	<header>
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>
@@ -34,7 +34,8 @@
 		<h1>This season's guest speakers</h1>
 		<br>
 		<h3>October</h3>
-		<h3><a href="">David Brancaccio</a></h3>
+		<h3><a href="/speakers/brancaccio.html">David Brancaccio</a></h3>
+		<img src="/images/brancaccio75.jpg" alt="a photo of David Brancaccio">
 
 		November
 		Andrew Ross Sorkin
