--- a/c3_index.html
+++ b/c3_index.html
@@ -36,12 +36,16 @@
 		<h3>October</h3>
 		<h3><a href="/speakers/brancaccio.html">David Brancaccio</a></h3>
 		<img src="/images/brancaccio75.jpg" alt="a photo of David Brancaccio">
+		<br>
+		<h3>November</h3>
+		<h3><a href="/speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+		<img src="/images/sorkin75.jpg" alt="a photo of Andrew Ross Sorkin">
 
-		November
-		Andrew Ross Sorkin
 
-		January
-		Amy Chua
+		<br>
+		<h3>January</h3>
+		<h3><a href="/speakers/chua.html">Amy Chua</a></h3>
+		<img src="/images/chua75.jpg" alt="a photo of Amy Chua">
 
 	</main>
 	<footer>
