--- a/c3_index.html
+++ b/c3_index.html
@@ -13,7 +13,7 @@
 
 	<header>
 		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our 75th Year</h3>
+		<h3>Celebrating our 75<sup>th</sup> Year</h3>
 	</header>
 	<main>
 		<h2>Our Mission</h2>
@@ -40,16 +40,16 @@
 		<h3>November</h3>
 		<h3><a href="/speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="/images/sorkin75.jpg" alt="a photo of Andrew Ross Sorkin">
-
-
 		<br>
 		<h3>January</h3>
 		<h3><a href="/speakers/chua.html">Amy Chua</a></h3>
 		<img src="/images/chua75.jpg" alt="a photo of Amy Chua">
-
+		<br>
 	</main>
 	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
+		<p>
+			&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+		</p>
 	</footer>
 </body>
 </html>
