--- a/speakers/brancaccio.html
+++ b/speakers/brancaccio.html
@@ -4,11 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="/images/favicon.ico">
 </head>
 
 <body>
     <main>
+		<p><a href="../c3_index.html">Return to index page</a></p>
 	    <h1>David Brancaccio</h1>
 	    <h2>This page is under construction.</h2>	        
     </main>
