--- a/c3_index.html
+++ b/c3_index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="/images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
+<img src="images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
 
 	<header>
 		<h2>San Joaquin Valley Town Hall</h2>
@@ -35,15 +35,15 @@
 		<br>
 		<h3>October</h3>
 		<h3><a href="/speakers/brancaccio.html">David Brancaccio</a></h3>
-		<img src="/images/brancaccio75.jpg" alt="a photo of David Brancaccio">
+		<img src="images/brancaccio75.jpg" alt="a photo of David Brancaccio">
 		<br>
 		<h3>November</h3>
 		<h3><a href="/speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-		<img src="/images/sorkin75.jpg" alt="a photo of Andrew Ross Sorkin">
+		<img src="images/sorkin75.jpg" alt="a photo of Andrew Ross Sorkin">
 		<br>
 		<h3>January</h3>
 		<h3><a href="/speakers/chua.html">Amy Chua</a></h3>
-		<img src="/images/chua75.jpg" alt="a photo of Amy Chua">
+		<img src="images/chua75.jpg" alt="a photo of Amy Chua">
 		<br>
 	</main>
 	<footer>
