--- a/speakers/sorkin.html
+++ b/speakers/sorkin.html
@@ -9,7 +9,7 @@
 
 <body>
 	<main>
-		<p><a href="../c3_index.html">Return to index page</a></p>
+		<p><a href="../index.html">Return to index page</a></p>
 		<h1>Andrew Ross Sorkin</h1>
 		<h2>This page is under construction.</h2>
 	</main>
