--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	</main>
 	<footer>
 		<p>
-			&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+			&copy Copyright Jillian Andrea Juat 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
 		</p>
 	</footer>
 </body>
