--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 	</main>
 	<footer>
 		<p>
-			&copy Copyright Jillian Andrea Juat 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+			&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+		</p>
+		<p>
+			Copyright Jillian Andrea Juat, 2023
 		</p>
 	</footer>
 </body>
