--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 	</main>
 	<footer>
 		<p>
-			&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
-		</p>
-		<p>
-			Copyright Jillian Andrea Juat, 2023
+			&copy Copyright Jillian Andrea Juat, 2023
 		</p>
 	</footer>
 </body>
